# sudoku-solver

./: LICENSE  README.md  pyproject.toml  sudoku-solver.py
