[tool.poetry]
name = "sudoku-solver"
version = "0.1.0"
description = "A program for solving Sudoku using Wave Function Collapse"
authors = ["M Harding <m@haxa.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pyxel = "^1.6.9"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
